--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,6 +17,17 @@
 .main h2{
     font-size: 3em;
 }
+@media only screen and (max-width: 768px) {
+    .main h2{
+        font-size: 2.75em;
+    }
+  }
+  
+  @media only screen and (max-width: 320px) {
+    .main h2{
+        font-size: 2.75em;
+    }
+  }
 .main span{
     color: #44E605;
 }
